--- a/index.html
+++ b/index.html
@@ -3,26 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Manutenção</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Bem-vindo - Manutenção</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="login-body">
-    <div class="login-container">
-        <img src="img/logo.jpg" alt="Logo" class="logo">
-        <h2>Login</h2>
-        <form id="loginForm">
-            <input type="email" id="email" placeholder="Email" required>
-            <input type="password" id="password" placeholder="Senha" required>
-            <label>
-                <input type="checkbox" id="rememberMe"> Lembrar-me
-            </label>
-            <button type="submit">Entrar</button>
-            <p id="errorMsg" class="error-message"></p>
-            <p><a href="#" id="resetPassword">Esqueci a senha</a></p>
-        </form>
+<body class="index-body">
+    <div class="index-container">
+        <h1>Bem-vindo ao Sistema de Manutenção</h1>
+        <p>Gerencie a manutenção de forma fácil e rápida.</p>
+        <a href="./login.html" class="btn">Acessar Login</a>
     </div>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-    <script src="js/auth.js"></script>
 </body>
 </html>
