--- a/login.html
+++ b/login.html
@@ -27,6 +27,6 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 
     <!-- Seu JS -->
-    <script src="./js/auth.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
