--- a/index.html
+++ b/index.html
@@ -4,13 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-vindo - Manutenção</title>
-    <link rel="stylesheet" href="style.css">
+         <link rel="stylesheet" href="./css/style.css"> <!-- Seu CSS -->
 </head>
-<body class="index-body">
-    <div class="index-container">
-        <h1>Bem-vindo ao Sistema de Manutenção</h1>
-        <p>Gerencie a manutenção de forma fácil e rápida.</p>
-        <a href="./login.html" class="btn">Acessar Login</a>
+<body>
+
+    <div id="header">
+        <!-- Conteúdo do header.html vai aqui -->
     </div>
+
+    <main>
+        <div class="welcome-box">
+            <img src="./img/logo.png" alt="Logo Sistema">
+            <h2>Bem-vindo ao Sistema de Manutenção</h2>
+            <p>Gerencie a manutenção de forma fácil e rápida.</p>
+            <button onclick="window.location.href='login.html'">Acessar Login</button>
+        </div>
+    </main>
+
+    <div id="footer">
+        <!-- Conteúdo do footer.html vai aqui -->
+    </div>
+
+   <script src="script.js"></script> <!-- Agora o JS está separado -->
+  
+
 </body>
 </html>
